fixed title being hidden by nav bar

--- a/app/assets/stylesheets/surveys.scss
+++ b/app/assets/stylesheets/surveys.scss
@@ -276,7 +276,7 @@ i {
 .survey-listing-title {
   position: relative;
   display: block;
-  margin: 3rem auto 0 auto;
+  margin: 8rem auto 0 auto;
   text-align: center;
   font-size: 3rem;
   color: $green;
